--- a/index.html
+++ b/index.html
@@ -3,34 +3,121 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Heanding</title>
+    <title>Register Form</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: Condensed, sans-serif;
+        }
+        body {
+            background-color: #6ed157;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+        .register-form {
+            background-color: #77cf6d;
+            padding: 40px;
+            border-radius: 15px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            width: 400px;
+        }
+        .register-form h2 {
+            text-align: center;
+            margin-bottom: 10px;
+            font-weight: bold;
+            text-transform: uppercase;
+        }
+        .register-form p.description {
+            text-align: center;
+            margin-bottom: 20px;
+            color: #220505;
+        }
+        .register-form label {
+            display: block;
+            margin-bottom: 5px;
+            font-weight: bold;
+        }
+        .register-form label span {
+            color: red;
+        }
+        .register-form input[type="email"],
+        .register-form input[type="password"],
+        .register-form input[type="text"] {
+            width: 100%;
+            padding: 10px;
+            border: none;
+            border-bottom: 2px solid #ec9999;
+            margin-bottom: 15px;
+            background: #e2c5c5;
+        }
+        .register-form .note {
+            font-size: 12px;
+            color: gray;
+            margin-top: -10px;
+            margin-bottom: 15px;
+        }
+        .register-form .checkbox {
+            display: flex;
+            align-items: center;
+            margin-bottom: 20px;
+        }
+        .register-form .checkbox input {
+            margin-right: 10px;
+        }
+        .register-form button {
+            width: 100%;
+            padding: 10px;
+            background-color: #007bff;
+            color: rgb(255, 255, 255);
+            border: none;
+            border-radius: 5px;
+            font-weight: bold;
+            cursor: pointer;
+        }
+        .register-form .login-link {
+            text-align: center;
+            margin-top: 20px;
+            font-size: 14px;
+        }
+        .register-form .login-link a {
+            font-weight: bold;
+            color: rgb(209, 124, 5);
+            text-decoration: none;
+        }
+    </style>
 </head>
 <body>
-    <center>
-    <font color="#00ff00" size="5px" face="moul"<h1>1. Heanding Elements</h1><br>
-    <font color="#000000"<h1>Hello world</h1><br>
-    <font color="#808080"<h2>Hello world</h2><br>
-    <font color="#ffff00"<h3>Hello world</h3><br>
-    <font color="#008080"<h4>Hello world</h4><br>
-    <font color="#ff00ff"<h5>Hello world</h5><br>
-    <font color="#000080"<h6>Hello world</h6><br>
- 
-    <font color="ffc0cb" size="4px" <div>Topic: Write a short paragraph about your house (300words).</div>
-    <hr>
-    <p>Lorem ipsum <br>
-     dolor sit amet consectetur adipisicing elit. Modi quia aperiam consectetur. Architecto iure distinctio et. Quidem similique cupiditate reprehenderit illo, <br>
-     sequi placeat? Illo nisi ullam ab unde ducimus odit similique facilis impedit? Aperiam consequatur explicabo quae. Laboriosam, saepe libero. Quod temporibus maiores voluptatibus adipisci officiis omnis excepturi distinctio ab debitis voluptatem sapiente error sunt,rerum molestiae. Omnis dolores tenetur blanditiis officia deleniti, voluptatibus beatae ducimus temporibus sequi in vero doloribus! Totam, quisquam harum. Iure temporibus delectus corrupti rem quibusdam, saepe voluptatum aperiam ut. Quis odio eius facilis, nulla corrupti, maxime ut sunt incidunt, a accusamus ipsum ipsa! Magnam, dolorum illum accusamus in explicabo unde totam neque harum ipsum voluptatum at iusto quos repellendus aliquam blanditiis fugit sapiente nulla. Provident nam laboriosam, vero iste nobis placeat voluptas harum labore possimus, eos magni sint iure facere porro aspernatur exercitationem. Nobis commodi, aut, voluptatum quae mollitia cum sint neque aperiam minima quasi sunt dolorem voluptatibus earum culpa voluptatem modi. Vel suscipit enim nobis iste, asperiores ea eaque architecto nemo, consequatur laudantium vero totam culpa quam sed! Quasi alias ad, iusto quia exercitationem odit perferendis, doloribus explicabo maiores ullam minima nemo est veritatis itaque ipsum tenetur facilis omnis tempora? Amet nisi provident temporibus sunt aliquam expedita maxime ipsa necessitatibus quisquam quibusdam vitae placeat hic totam sed consectetur, tenetur rerum illo? Sunt quos quasi libero placeat voluptates tempora qui ipsa quis sint rerum fuga natus ullam eum perferendis magnam inventore rem odit corporis, exercitationem asperiores doloribus adipisci. Suscipit, delectus quaerat dolorem atque non fugiat nostrum quam voluptates, amet corrupti iste, dolor rerum! Necessitatibus ducimus nulla aspernatur, minima deleniti recusandae quidem commodi similique. Cumque a dolorum hic deleniti similique. Quod sint incidunt obcaecati. Deleniti labore, sit iure illum modi est aperiam pariatur quod, voluptatibus natus sint! At eveniet sint eum possimus non nisi inventore nam.</p>
-    <pre>
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus mollitia porro <mark> incidunt obcaecati tenetur accusantium voluptatem, veniam quo quisquam laboriosam id quae magni? Vero asperiores deleniti dolor cumque quidem suscipit.</mark>
-    </pre>
-    <font color="ff0000" size="3px" <h1>Hello <span>World</span></h1>\
-      <p>My name is : <b>Chungpor </b></p>
-      <p>My girlfriend name is : <strong>ChakriYa</strong></p>
-      <h1>From <del>9$</del>to 3.5$</h1>
-      <p>My mom said : <q><i>Come home be careful</i></q> </p>
-      <em>Hello Guys</em>
-      <h1><u>មេរៀនទី១</u></h1>
-      <ins>Hello</ins>
+    <form class="register-form">
+        <h2>Register with ETEC</h2>
+        <p class="description">Register with us for more information about courses.</p>
+
+        <label>Email Address <span>*</span></label>
+        <input type="email" placeholder="example123@gmail.com">
+        <p class="note"><strong>Note:</strong> We will send the code via this email</p>
+
+        <label>Password <span>*</span></label>
+        <input type="password" placeholder="########">
+
+        <label>Confirm Password <span>*</span></label>
+        <input type="password" placeholder="########">
+
+        <label>User Name <span>*</span></label>
+        <input type="text" placeholder="Jack Ma">
+
+        <div class="checkbox">
+            <input type="checkbox" id="remember">
+            <label for="remember" style="font-weight: normal;">Remember Me</label>
+        </div>
+
+        <button type="submit">Register Now</button>
+
+        <div class="login-link">
+            or you had an account ? <a href="#">Log In</a>
+        </div>
+    </form>
 </body>
 </html>
- </center>
